See https://github.com/mathml-refresh/mathml/issues/123 Fraction shifts are with respect to baseline not math axis.
WPT tests https://w3c-test.org/mathml/presentation-markup/fractions/frac-parameters-1.html https://w3c-test.org/mathml/presentation-markup/fractions/frac-parameters-2.html have been updated upstream.
Created attachment 377702 [details] Patch (WIP)
Created attachment 377703 [details] Patch There was a typo in my previous patch, this new version makes frac-parameters-1.html and frac-parameters-2.html pass again.
Created attachment 377728 [details] Patch
Created attachment 377730 [details] testcase
Created attachment 377731 [details] screenshot of testcase with webkitgtk
Created attachment 377732 [details] screenshot of testcase with webkitgtk, with patch applied
Comment on attachment 377728 [details] Patch Attachment 377728 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12984841 New failing tests: mathml/presentation/stretchy-depth-height-symmetric.html mathml/presentation/roots.xhtml
Created attachment 377742 [details] Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Created attachment 377751 [details] Patch
Created attachment 377765 [details] Patch
Comment on attachment 377765 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=377765&action=review LGTM. > LayoutTests/ChangeLog:3 > + Bug 201242 - Fix interpretation of fraction shifts No need for Bug * part. > LayoutTests/imported/w3c/ChangeLog:3 > + Bug 201242 - Fix interpretation of fraction shifts Ditto. > Source/WebCore/rendering/mathml/RenderMathMLFraction.cpp:93 > + // See https://mathml-refresh.github.io/mathml-core/#fraction-with-nonzero-line-thickness I think comments end with period, period. > Source/WebCore/rendering/mathml/RenderMathMLFraction.cpp:131 > + // See https://mathml-refresh.github.io/mathml-core/#fraction-with-zero-line-thickness Ditto.
Created attachment 377790 [details] Patch for landing
Comment on attachment 377790 [details] Patch for landing Rejecting attachment 377790 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 377790, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/12986844
Created attachment 377791 [details] Patch for landing
Comment on attachment 377791 [details] Patch for landing Clearing flags on attachment: 377791 Committed r249360: <https://trac.webkit.org/changeset/249360>
<rdar://problem/55017979>